test/sema/typeck/pattern/lit-bool-wrong-type.out
error: Int64 expected but got type Bool.
--> lit-bool-wrong-type.dora:2:14
 | fn f(x: (String, Int64)) {
 |     let (_y, true) = x;
                ~~~~
 | }
 | 
1 error found.
