test/sema/typeck/pattern/lit-bool-wrong-type.dora
fn f(x: (String, Int64)) {
    let (_y, true) = x;
}
